white-color-coded questions, and purple-color-coded debug functions

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <header>MockApp Develop Branch</header>
 
       <div v-if="eventNum === 0">
-        <initial-setup :accels="accels" :gyros="gyros"></initial-setup>
-        <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Motion Sensor Use</button><br>
+        <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup>
+        <button style="font-size: 2rem; margin: 3rem 0 0 1rem;" id="start_demo" href="#" role="button">Allow Sensor Use</button><br>
         <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" :disabled="(accels.x+accels.y+accels.z+gyros.x+gyros.y+gyros.z) == 0" @click="eventNum++">Next</button><br>
-        <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem;" v-if="debugMode" @click="eventNum++">Force Next</button>
+        <button class="button" style="font-size: 2rem; margin: 1rem 0 0 1rem; color: fuchsia;" v-if="debugMode" @click="eventNum++">Force Next</button>
       </div>
       <initial-form v-else-if="eventNum === 1" @initial-form-submitted="addInitialForm" @touch="updateTouch" @del-key="updateDel" :debug-mode="debugMode"></initial-form>
       <ground-survey v-else-if="eventNum === 2" @ground-truth-submitted="addGroundTruth" @touch="updateTouch" :debug-mode="debugMode"></ground-survey>
@@ -36,7 +36,7 @@
         <subtraction></subtraction><br>
         <scwt></scwt><br>
       -->
-      <div v-if="debugMode">
+      <div v-if="debugMode" style="color: fuchsia;">
         
         <ul>Debugger:
           <li>eventNum = {{ eventNum }}</li>
