Overhauled the SCWT component to better match the referenced paper.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <div id="app">
       <header>MockApp Develop Branch</header>
-
       <div v-if="eventNum === 0">
+        <br><p>Before starting this experiment, please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode.</p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
         <p>Once you turned off the auto corrections, please press "Allow Sensor Use" button, and press "Next" to proceed.<br><br>By pressing the button below, you agree to the privacy policy stated above.</p>
