Added some sort of fail-safe if websocket is not connected at the endScreen component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="app">
       <header>MockApp Develop Branch</header>
       <div v-if="eventNum === 0">
+        <br><p>This experiment will take about 7 ~ 10 min</p>
         <br><p>Before starting this experiment, please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode.</p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
