--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <div id="app">
-      <header>MockApp Develop Branch</header>
+      <header>MockApp</header>
       <div v-if="eventNum === 0">
-        <br><p>This experiment will take about 7 ~ 10 min</p>
-        <br><p>Before starting this experiment, please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode.</p><br>
+        <br><p>This experiment will take about 7 ~ 12 min.</p>
+        <br><p>The purpose of this research will be disclosed at the end of this experiment, in order to avoid pre-knowledge biases. Participants may choose whether to send the data or not after knowing the purpose of this research.</p>
+        <br><p>Before starting this experiment, <u style="color: pink;">please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode. </u></p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
-        <p>Once you turned off the auto corrections, please press "Allow Sensor Use" button, and press "Next" to proceed.<br><br>By pressing the button below, you agree to the privacy policy stated above.</p>
+        <p>Once you turned off all of the auto corrections, please <u style="color: pink">press "Allow Sensor Use" button, and press "Next" to proceed</u>.<br><br>By pressing the button below, you agree to the privacy policy stated above.</p>
         <div class="box">
           <button class="button" style="font-size: 2rem; margin: 1rem 0 0 33%;" id="start_demo" href="#" role="button">Allow Sensor Use</button><br>
           <button class="button" style="font-size: 2rem; margin: 1rem 0 0 45%;" :disabled="(accels.x+accels.y+accels.z+gyros.x+gyros.y+gyros.z) == 0" @click="eventNum++">Next</button>
@@ -27,13 +28,13 @@
       <initial-form v-else-if="eventNum === 1" @initial-form-submitted="addInitialForm" @touch="updateTouch" @del-key="updateDel" :debug-mode="debugMode"></initial-form>
       <ground-survey v-else-if="eventNum === 2" @ground-truth-submitted="addGroundTruth" @touch="updateTouch" :debug-mode="debugMode"></ground-survey>
       <lorem-ipsum v-else-if="eventNum === 3" @sensors-data-submitted="addSensorsData" @touch="updateTouch" @del-key="updateDel" @skip="skip" :debug-mode="debugMode" :accels="accels" :gyros="gyros" :touch-num="touchNum" :del-num="delNum" :event-num="eventNum"></lorem-ipsum>
-      <next-screen v-else-if="eventNum === 4" @skip="skip"></next-screen>
+      <next-screen v-else-if="eventNum === 4" @skip="skip" :event-num="eventNum"></next-screen>
       <subtraction v-else-if="eventNum === 5" :debug-mode="debugMode" @skip="skip"></subtraction>
-      <next-screen v-else-if="eventNum === 6" @skip="skip"></next-screen>
+      <next-screen v-else-if="eventNum === 6" @skip="skip" :event-num="eventNum"></next-screen>
       <scwt v-else-if="eventNum === 7" :debug-mode="debugMode" @skip="skip"></scwt>
-      <next-screen v-else-if="eventNum === 8" @skip="skip"></next-screen>
+      <next-screen v-else-if="eventNum === 8" @skip="skip" :event-num="eventNum"></next-screen>
       <lorem-ipsum v-else-if="eventNum === 9" @sensors-data-submitted="addSensorsData" @touch="updateTouch" @del-key="updateDel" @skip="skip" :debug-mode="debugMode" :accels="accels" :gyros="gyros" :touch-num="touchNum" :del-num="delNum" :event-num="eventNum"></lorem-ipsum>
-      <next-screen v-else-if="eventNum === 10" @skip="skip"></next-screen>
+      <next-screen v-else-if="eventNum === 10" @skip="skip" :event-num="eventNum"></next-screen>
       <ground-survey v-else-if="eventNum === 11" @ground-truth-submitted="addGroundTruth" @touch="updateTouch" :debug-mode="debugMode"></ground-survey>
       <end-screen v-else-if="eventNum === 12" :run-data="runData"></end-screen>
 
