Added Japanese translation.　日本語を追加しました。

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="app">
       <header>MockApp (JP)</header>
       <div v-if="eventNum === 0">
-        <br><p>This experiment will take about 7 ~ 12 min.</p>
-        <br><p>The purpose of this research will be disclosed at the end of this experiment, in order to avoid pre-knowledge biases. Participants may choose whether to send the data or not after knowing the purpose of this research.</p>
-        <br><p>Before starting this experiment, <u style="color: pink;">please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode. </u></p><br>
+        <br><p>この実験の所要時間は約7〜12分です。</p>
+        <br><p>本研究の目的は、事前知識バイアスを避けるため、この実験の最後に開示されます。参加者は本研究の目的を知った上で、データを送るかどうかを選択することができます。</p>
+        <br><p>この実験を始める前に、 <u style="color: pink;">できれば椅子に座り、携帯電話は縦向きで手にとってご使用ください。</u></p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
         <p>Once you turned off all of the auto corrections, please <u style="color: pink">press "Allow Sensor Use" button, and press "Next" to proceed</u>.<br><br>By pressing the button below, you agree to the privacy policy stated above.</p>
