--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div v-if="eventNum === 0">
         <br><p>This experiment will take about 7 ~ 12 min.</p>
         <br><p>The purpose of this research will be disclosed at the end of this experiment, in order to avoid pre-knowledge biases. Participants may choose whether to send the data or not after knowing the purpose of this research.</p>
-        <br><p>Before starting this experiment, <u style="color: pink;">please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode. </u></p><br>
+        <br><p>Before starting this experiment, <u style="color: pink;">please use Google Chrome for your browser. Please avoid using in-app browser such as WhatsApp's, Messenger's, and etc. Additionally, please sit down, preferably on a chair, and hold your phone with your hand(s) in a portrait/vertical mode. </u></p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
         <p>Once you turned off all of the auto corrections, please <u style="color: pink">press "Allow Sensor Use" button, and press "Next" to proceed</u>.<br><br>By pressing the button below, you agree to the privacy policy stated above.</p>
