--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div v-if="eventNum === 0">
         <br><p>この実験の所要時間は約7〜12分です。</p>
         <br><p>本研究の目的は、事前知識バイアスを避けるため、この実験の最後に開示されます。参加者は本研究の目的を知った上で、データを送るかどうかを選択することができます。</p>
-        <br><p>この実験を始める前に、 <u style="color: pink;">ブラウザをGoogle Chromeにしてください。LINE等のアプリから開かれるブラウザは使わないでください<br><br>また、できれば椅子に座り、携帯電話は縦向きで、手にとってご使用ください。</u></p><br>
+        <br><p>この実験を始める前に、 <u style="color: pink;">ブラウザをGoogle Chromeにしてください。LINE等のアプリから開かれるブラウザは使わないでください<br><br>また、移動しながら(歩きながら、車や電車に乗りながら)のご参加はしないでください。できれば椅子に座り、携帯電話は縦向きで、手にとってご使用ください。</u></p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
         <p>自動補正を全てOFFにした後、 <u style="color: pink">"Allow Sensor Use"ボタンを押し、"Next"ボタンを押してください</u><br><br>また、以下のボタンを押すと、上記のプライバシーポリシーに同意して頂いた事とします。</p>
