Fixed some texts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br><p>この実験の所要時間は約7〜12分です。</p>
         <br><p>本研究の目的は、事前知識バイアスを避けるため、この実験の最後に開示されます。参加者は本研究の目的を知った上で、データを送るかどうかを選択することができます。</p>
         <br><p>この実験を始める前に、 <u style="color: pink;">ブラウザをGoogle Chromeにしてください。LINE等のアプリから開かれるブラウザは使わないでください<br>
-          <br>また、Google Chromeの拡張機能で背景や文字の色を変えるものを使用している場合、このサイトでは機能をオフにしてください。
+          <br>また、Google Chromeの拡張機能で背景や文字の色を変えるものを使用している場合、このサイトでは機能をオフにしてください。<br>
           <br>更に、移動しながら(歩きながら、車や電車に乗りながら等)のご参加はおやめください。できれば椅子に座り、携帯電話は縦向きで、手にとってご使用ください。</u></p><br>
         <privacy-policy></privacy-policy><br>
         <initial-setup :accels="accels" :gyros="gyros" :debug-mode="debugMode"></initial-setup><br>
