Changed header, and took off dev

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="app">
-      <header>MockApp Develop Branch</header>
+      <header>MockApp</header>
       <div v-if="eventNum === 0">
         <br><p>This experiment will take about 7 ~ 12 min.</p>
         <br><p>The purpose of this research will be disclosed at the end of this experiment, in order to avoid pre-knowledge biases. Participants may choose whether to send the data or not after knowing the purpose of this research.</p>
